<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#266294"
    android:padding="8dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btLogin"
            style="android:buttonStyle"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
              android:gravity="center_vertical|center_horizontal|left"
            android:onClick="logar"
            android:text="@string/btLogin_label" />

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tvTitulo_text"
            android:textColor="#ffd700"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spTpBusca"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#76b2e4"
            android:padding="16dp"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/tvBusca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tvBusca_text"
            android:textColor="#ffd700"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPesquisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#76b2e4"
            android:ems="10"
            android:hint="@string/etPesquisa_text"
            android:padding="16dp"
            android:textColorHint="#222" >

            <requestFocus />
        </EditText>

    </TableRow>

    <Button
        android:id="@+id/btBusca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffd700"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="Execute"
        android:text="@string/Busca" />

</TableLayout>